[tool.poetry]
name = "A-Api-Server"
version = "1.3.0"
description = "自建一个Resful风格的接口自助服务,方便API自动化测试工具的开发与调试!"
authors = ["devin <1324556701@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zhuifengshen/a-api-server"
repository = "https://github.com/zhuifengshen/a-api-server"
keywords = ["ApiServer", "Api", "MockServer", "Api Test", "接口测试", "接口自动化测试"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "a_api_server"}]

[tool.poetry.dependencies]
python = ">=3.6"
flask = ">=1.1.4,<2.3"
jinja2 = ">=2.11.3,<3.1"

[tool.poetry.scripts]
a_api_server = "a_api_server.api_server:cli_main"
a-api-server = "a_api_server.api_server:cli_main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

